# GothicMultiplayer

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json  version.h.in  xmake.lua
.github/: copilot-instructions.md
GMP_Client/: Button.cpp  Button.h  CActiveAniID.cpp  CActiveAniID.h  CAnimMenu.cpp  CChat.cpp  CChat.h  CConfig.cpp  CConfig.h  CGmpClient.cpp  CHeroClass.cpp  CIngame.cpp  CInterpolatePos.cpp  CInterpolatePos.h  CLanguage.cpp  CLanguage.h  CMainMenu.cpp  CMainMenu.h  CMakeLists.txt  CMap.cpp  CMap.h  CMenu.cpp  CMenu.h  CObjectMenu.cpp  CObjectMenu.h  CObservation.h  CPlayer.cpp  CPlayer.h  CPlayerList.cpp  CPlayerList.h  CSelectClass.cpp  CShrinker.cpp  CShrinker.h  CSpawnPoint.h  CSyncFuncs.cpp  CWatch.cpp  CWatch.h  DiscordPresence.cpp  DiscordPresence.h  ExtendedServerList.h  (+18 more)
GMP_Client/gothic-api/: CMakeLists.txt
GMP_Client/gothic-api/ZenGin/: zGothicAPI.cpp  zGothicAPI.h
GMP_Client/gothic-api/ZenGin/DirectX7/include/: ddraw.h
GMP_Client/gothic-api/ZenGin/Gothic_II_Addon/API/: oAiHuman.h  oAiShoot.h  oAniCtrl.h  oBarrier.h  oBinkPlayer.h  oCollisionObjectMiscChar.h  oCsPlayer.h  oFocus.h  oHelp.h  oInfo.h  oItem.h  oLogManager.h  oMenuSavegame.h  oMenu_Status.h  oNews.h  oParticleControl.h  oPrototypes.h  oSavegame.h  oSvm.h  oSysInfo.h  oViewDialogInventory.h  oViewDialogItemContainer.h  oViewDialogStealContainer.h  oVisFx.h  oWaynet.h  zAccount.h  zAiCamera.h  zArchiver.h  zArchiver2.h  zArchiverGeneric.h  zBVolume_Util.h  zCCsContext.h  zCCsProps.h  zCollisionDetector.h  zCollisionObjectMisc.h  zConvexCollision.h  zCsCamera.h  zEigen.h  zEngine.h  zEventMan.h  (+60 more)
GMP_Client/gothic-api/ZenGin/Gothic_UserAPI/: oCGame.inl
GMP_Serv/: character_definition.cpp  character_definition.h  game_server.cpp  game_server.h  main.cpp  xmake.lua
InjectMage/: xmake.lua
Shared/: crypto_utils.cpp  (+3 more)
(+450 files in other folders)
